force-app/main/default/objects/Property_Media__c/Property_Media__c.object-meta.xml
<CustomObject>
    <label>Property Media</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Property Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Medias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>