force-app/main/default/objects/Property_Media__c/fields/Filename__c.field-meta.xml
<CustomField>
    <fullName>Filename__c</fullName>
    <label>Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>