force-app/main/default/objects/Property_Media__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exterior View</fullName>
            </value>
            <value>
                <fullName>Living Room</fullName>
            </value>
            <value>
                <fullName>Bedrooms</fullName>
            </value>
            <value>
                <fullName>Bathrooms</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Site View</fullName>
            </value>
            <value>
                <fullName>Floor Plan</fullName>
            </value>
            <value>
                <fullName>Master Plan</fullName>
            </value>
            <value>
                <fullName>Location Map</fullName>
            </value>
            <value>
                <fullName>Common Area</fullName>
            </value>
            <value>
                <fullName>Washrooms</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>